# Terminal-64

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  identity.md  memory.md  suggestions.json  token-ledger.json
.wolf/bypass-investigation/: agent-1.md  agent-2.md  agent-3.md
.wolf/chat-perf/research/: agent-1-patterns.md  agent-2-renders.md  agent-3-transform-impact.md  t3code-extract.md  vercel-extract.md
.wolf/codex-port/: 01-contract.md  02-claude-adapter.md  03-codex-adapter.md  04-rust-plan.md
.wolf/codex-port/05-codex-fixes/: 01-toolcall-persistence.md  02-rewind.md  03-fork.md  04-cleanup.md
.wolf/hooks/: _session.json
.wolf/jsonl-refactor/: backend-notes.md  design.md  frontend-notes.md  verification.md
.wolf/jsonl-refactor/research/: SYNTHESIS.md  clawd-on-desk.md  our-baseline.md  t3code.md  yasasbanuka.md
.wolf/terminal-rewrite/research/: agent-1-selection.md  agent-2-paste.md  agent-3-interaction.md
docs/: delegation-mcp-limitations.md
mcp/: delegation-server.mjs  t64-server.mjs  widget-server.mjs
plans/: checkpoint-undo-system.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled-widgets/project-intel/: index.html  main.js  styles.css
src-tauri/capabilities/: default.json
src-tauri/src/: claude_manager.rs  discord_bot.rs  lib.rs  permission_server.rs  pty_manager.rs  types.rs  voice_manager.rs  widget_server.rs
src-tauri/src/language_tools/: luau.rs  mod.rs
src-tauri/src/providers/: claude.rs  codex.rs  util.rs
src-tauri/src/voice/: command_stt.rs  whisper.rs
src/components/canvas/: Canvas.css  Canvas.tsx  ClaudeDialog.css  ClaudeDialog.tsx  FloatingTerminal.css  FloatingTerminal.tsx  TextEditor.tsx
src/components/claude/: ChatInput.tsx  ChatMessage.tsx  ClaudeChat.css  ClaudeChat.tsx  Delegation.css  DelegationBadge.tsx  DelegationPanel.tsx  FileTree.tsx  PromptIsland.tsx  VoiceMascot.tsx
src/components/command-palette/: CommandPalette.css  CommandPalette.tsx
src/components/panels/: LeftPanelContainer.tsx  PanelFrame.css  PanelFrame.tsx
src/components/party/: PartyOverlay.css  PartyOverlay.tsx
src/components/provider-chat/: ChatEditOverlay.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessageList.tsx  FileTree.tsx  ProviderChat.css  ProviderChat.tsx  toolPresentation.ts  useChatRows.ts
src/components/settings/: SettingsPanel.css  SettingsPanel.tsx
src/components/skill/: Skill.css  SkillDialog.tsx
src/components/terminal/: XTerminal.css  XTerminal.tsx
src/components/ui/: BrandLogos.tsx  DropdownMenu.css  DropdownMenu.tsx  Kbd.css  Kbd.tsx  NumberTicker.tsx  Particles.tsx
src/components/widget/: BrowserPanel.tsx  Widget.css  WidgetDialog.tsx  WidgetPanel.tsx
src/contracts/: providerIpc.ts  providerRuntime.ts
src/hooks/: useChatFork.ts  useChatRewind.ts  useChatSend.ts  useClaudeEvents.ts  useDelegationOrchestrator.ts  useDelegationSpawn.ts  useKeybindings.ts  useLanguageDiagnostics.ts  usePartyMode.ts  useVoiceControl.ts
src/lib/: ai.ts  claudeEventDecoder.ts  claudeSlashCommands.ts  codexEventDecoder.ts  commands.ts  constants.ts  delegationWorkflow.ts  keybindingEngine.ts  languageDiagnostics.ts  luauMonacoLanguage.ts  notifications.ts  providerModularity.verification.ts  providerRuntime.ts  providers.ts  snapUtils.ts  tauriApi.ts  themeEngine.ts  types.ts  updater.ts  voiceApi.ts
src/stores/: canvasStore.ts  claudeStore.ts  delegationStore.ts  panelStore.ts  providerSessionStore.ts  settingsStore.ts  themeStore.ts
src/themes/: dark.json  discord.json
