[package]
name = "terminal-64"
version = "1.0.0"
description = "A modern terminal emulator"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "devtools", "unstable"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.0"
dirs = "5"
url = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
spectrum-analyzer = "1.5"
ringbuf = "0.4"
base64 = "0.22"
rand = "0.8"
zip = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "online"] }
zerocopy = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
screencapturekit = "1.5"
