[package]
name = "terminal-64"
version = "1.0.0"
description = "A modern terminal emulator"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api", "devtools", "unstable"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.7.0"
dirs = "5"
url = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
spectrum-analyzer = "1.5"
ringbuf = "0.4"
base64 = "0.22"
rand = "0.8"
zip = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "online"] }
zerocopy = "0.8"
# Voice control: mic capture + resample + ASR
cpal = "0.15"
rubato = "0.15"
# Pin ort to fastembed's transitive version (Cargo.lock: 2.0.0-rc.11) so the two deps share one build.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["ndarray", "download-binaries"] }
ndarray = "0.17"
# Pin to the version fastembed already pulls in (Cargo.lock: 0.22.2) so there's one build.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
sha2 = "0.10"
hex = "0.4"
# whisper-rs is optional: its whisper.cpp build requires cmake, which isn't
# a baseline dev dep yet. Enable with `--features voice-dictation` once cmake
# is provisioned on the build host. The voice/whisper.rs stub compiles either way.
whisper-rs = { version = "0.13", default-features = false, optional = true }

[features]
default = ["voice-dictation"]
# Enable whisper.cpp dictation (requires cmake at build time).
voice-dictation = ["dep:whisper-rs"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
screencapturekit = "1.5"

# Enable the Metal GPU backend for whisper.cpp only on macOS; unions with the base optional entry above.
[target.'cfg(target_os = "macos")'.dependencies.whisper-rs]
version = "0.13"
default-features = false
features = ["metal"]
optional = true

[lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
